--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="content">
     <div class="logo-container">
-      <img src="/assets/pfp.jpg" alt="Chaila Art Logo">
+      <img src="assets/pfp.jpg" alt="Chaila Art Logo">
     </div>
     <h1>Chaila Art</h1>
     <div class="tagline">Your Artist is Here to Serve</div>
